src-ken&y/objects/Catalog__c.object
<CustomObject>
    <customHelpPage>HelpCatalog</customHelpPage>
    <description>e-Procurement Catalog as related to a Company</description>
    <fields>
        <fullName>Catalog_Name__c</fullName>
        <description>Name of the catalog (as it will be shown to requestors)</description>
        <label>Catalog Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Unique__c</fullName>
        <description>Stores a unqiue value to prevent duplicate catalogs (for example, with the same name).</description>
        <label>Catalog Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Catalog</label>
    <nameField>
        <label>Catalog Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Company_Local_Share__c</fullName>
        <label>Company Local Share</label>
    </sharingReasons>
</CustomObject>